--- a/style.css
+++ b/style.css
@@ -153,3 +153,9 @@ font-weight: 700;
     background:  #FFF;
     width: 100%;
 }
+textarea{
+color: #757575;
+font-size: 16px;
+font-weight: 400;
+line-height: 28px; /* 175% */
+}
